# lite-jvm-rust

./: Cargo.toml  README.md  README.txt
class_file_reader/: Cargo.toml
class_file_reader/src/: attribute_info.rs  cesu8_byte_buffer.rs  class_file.rs  class_file_error.rs  class_file_reader.rs  class_file_version.rs  constant_pool.rs  field_info.rs  instruction.rs  lib.rs  method_info.rs
class_file_reader/tests/integration/: main.rs  test_read_class.rs  utils.rs
lite_jvm/: Cargo.toml
lite_jvm/resources/: ExceptionTest.java  FieldTest.java  HelloWorld.java  ThreadTest.java  Utils.java
lite_jvm/src/: bootstrap_class_loader.rs  call_frame.rs  call_stack.rs  class_finder.rs  class_manager.rs  java_exception.rs  jvm_error.rs  jvm_exceptions.rs  jvm_values.rs  lib.rs  loaded_class.rs  main.rs  memory_trunk.rs  method_area.rs  native_method_area.rs  object.rs  object_heap.rs  operand_stack.rs  program_counter.rs  reference_value.rs  referenced_value.rs  runtime_attribute_info.rs  runtime_constant_pool.rs  runtime_field_info.rs  runtime_method_info.rs  stack.rs  stack_frame.rs  stack_trace_element.rs  static_field_area.rs  value_stack.rs  virtual_machine.rs  virtual_machine_stack.rs  virtual_machine_stack_frame.rs
lite_jvm_cli/: Cargo.toml
